--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -4,13 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./index.css" />
+	<link rel="stylesheet" href="./index.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<title>Pimg With Preact</title>
-
 </head>
 
 <body>
-	<div id="root"></div>
+	<nav class="navbar navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">
+		 Pimg With React
+		</a>
+	</nav>
+	<div class="container">
+		<div id="root"></div>
+	</div>
 	<script src="./index.js"></script>
 </body>
 
